feat: Lighthouseスコアの自動更新ワークフローを追加

--- a/.github/workflows/lighthouse.yml
+++ b/.github/workflows/lighthouse.yml
@@ -1,22 +1,9 @@
 name: Lighthouse CI
-
 on:
   push:
     branches: [main]
   pull_request:
     branches: [main]
-
-permissions:
-  contents: write
-  checks: write
-  statuses: write
-  pull-requests: write
-  issues: write
-
-env:
-  NODE_ENV: production
-  NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
-  NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
 
 jobs:
   lighthouse:
@@ -24,115 +11,40 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Setup Chrome
-        uses: browser-actions/setup-chrome@v1
-
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
         with:
           bun-version: latest
 
-      - name: Create cache directories
-        run: |
-          sudo mkdir -p /root/.cache/puppeteer
-          sudo chmod -R 777 /root/.cache/puppeteer
-
-      - name: Cache Turbo
-        uses: actions/cache@v3
-        with:
-          path: .turbo
-          key: ${{ runner.os }}-turbo-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-turbo-
-
-      - name: Cache Next.js
-        uses: actions/cache@v3
-        with:
-          path: |
-            .next/cache
-            !.next/cache/images
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('**/package.json', '**/bun.lockb', '**.[jt]s', '**.[jt]sx') }}
-          restore-keys: |
-            ${{ runner.os }}-nextjs-
-
-      - name: Cache dependencies
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.bun/install/cache
-            /root/.cache/puppeteer
-          key: ${{ runner.os }}-deps-${{ hashFiles('**/bun.lockb', '**/package.json') }}
-          restore-keys: |
-            ${{ runner.os }}-deps-
-
       - name: Install dependencies
         run: bun install
 
       - name: Build
-        run: |
-          echo "NEXT_PUBLIC_SUPABASE_URL=${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}" >> .env
-          echo "NEXT_PUBLIC_SUPABASE_ANON_KEY=${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}" >> .env
-          bun run build
+        run: bun run build
 
-      - name: Run Lighthouse CI and Process Results
-        env:
-          LHCI_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Run Lighthouse CI
         run: |
-          # Lighthouse CIの実行
           bunx @lhci/cli@0.14.x autorun
-          
-          # 結果の確認
-          if [ $? -eq 0 ]; then
-            echo "Lighthouse CI completed successfully"
-            
-            # 結果ファイルの確認
-            ls -la .lighthouseci/
-            
-            # バッジの生成
-            echo "Generating badges..."
-            bun scripts/lighthouse/generate-badges.ts
-            
-            # バッジディレクトリの作成
-            mkdir -p .github/badges
-            
-            # READMEの更新
-            for category in performance accessibility bestPractices seo; do
-              if [ -f ".github/badges/${category}.json" ]; then
-                url=$(cat ".github/badges/${category}.json" | bun x json url)
-                displayName=$(echo "$category" | sed 's/^./\U&/')
-                sed -i "s|!\[$displayName\]([^)]*)|![$displayName]($url)|" README.md
-              fi
-            done
-            
-            # 変更をコミット
-            git config --global user.name 'github-actions[bot]'
-            git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-            git add .github/badges README.md
-            git commit -m "docs: 🎨 Lighthouse スコアバッジを更新" || echo "No changes to commit"
-            git push
-          else
-            echo "Lighthouse CI failed"
-            exit 1
-          fi
 
-      - name: Upload artifacts
-        if: always()
-        uses: actions/upload-artifact@v3
-        with:
-          name: lighthouse-results
-          path: .lighthouseci
-          retention-days: 7
+      - name: Generate Badges
+        run: bun scripts/lighthouse/generate-badges.ts
 
-      - name: Create GitHub Issue on failure
-        if: failure()
-        uses: actions/github-script@v7
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            await github.rest.issues.create({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              title: '🚨 Lighthouse CI Failed',
-              body: `Lighthouse CI failed on commit ${context.sha}\n\nCheck the [workflow run](${context.serverUrl}/${context.repo.owner}/${context.repo.repo}/actions/runs/${context.runId}) for details.`,
-              labels: ['performance', 'lighthouse-ci']
-            });
+      - name: Update README with new scores
+        run: |
+          for category in performance accessibility "best-practices" seo; do
+            score=$(cat .github/badges/${category}.json | jq -r .score)
+            # カテゴリ名の変換（best-practicesの場合のみ）
+            if [ "$category" = "best-practices" ]; then
+              search_category="Best%20Practices"
+            else
+              search_category="$category"
+            fi
+            sed -i "s/${search_category}-[0-9]\{1,3\}/${search_category}-${score}/" README.md
+          done
+
+      - name: Commit and push if changed
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add README.md .github/badges/
+          git diff --quiet && git diff --staged --quiet || (git commit -m "docs: Lighthouseスコアの更新 [skip ci]" && git push)
